<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="3dp">

        <TextView
            style="normal"
            android:text="@string/address"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

        <EditText
            android:id="@+id/address"
            style="normal"
            android:hint="@string/address"
            android:inputType="text"
            android:autofillHints="@string/address" />

        <TextView
            style="normal"
            android:text="@string/port" />

        <EditText
            android:id="@+id/port"
            style=""
            android:inputType="number"
            android:autofillHints="port" />

        <TextView
            style="normal"
            android:text="@string/secret" />

        <EditText
            android:id="@+id/secret"
            style="normal"
            android:password="true"
            android:autofillHints="pasword"
            android:inputType="text" />

        <TextView
            style="normal"
            android:text="@string/proxyhost" />

        <EditText
            android:id="@+id/proxyhost"
            style="normal"
            android:autofillHints="proxyhost"
            android:inputType="text" />

        <TextView
            style="normal"
            android:text="@string/proxyport" />

        <EditText
            android:id="@+id/proxyport"
            style="normal"
            android:inputType="number"
            android:autofillHints="@string/proxyport" />

        <TextView
            style="normal"
            android:text="@string/packages" />

        <RadioGroup
            style="@style/Animation.Design.BottomSheetDialog"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/allowed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/allowed" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/disallowed" />
        </RadioGroup>

        <EditText
            android:id="@+id/packages"
            style="normal"
            android:autofillHints="@string/packages"
            android:inputType="text" />

        <Button
            android:id="@+id/connect"
            style="normal"
            android:text="@string/connect" />

        <Button
            android:id="@+id/disconnect"
            style="@style/Widget.AppCompat.Button"
            android:text="@string/disconnect" />
    </LinearLayout>
</ScrollView>